explain how to solve for values of bribes in 2 nnb case

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -461,6 +461,7 @@ The math that follows from Equation \ref{eq:logistic}:
 		and
 		\begin{equation}
 			\frac{e^{-Y} + e^{-Z}}{\left(1+e^{-Y}\right)\left(1+e^{-Z}\right)} \frac{e^{-X}}{\left(1+e^{-X}\right)^2}= \frac{1}{W_B}
+			\label{eq:base}
 		\end{equation}
 		Setting the left-hand size of these last two equations (the FOCs for the bribes for 0 and $\frac{1}{2}$ equal to each other,
 		\[
@@ -507,6 +508,7 @@ The second order conditions will pin down the solution in this case of two non-n
 	\item SOCs imply that both $X$ and $Y$ are positive.
 \end{itemize}
 
+Once we know that both $X=Y>0$ (or $X=Z>0$), go back to one of the equations like \ref{eq:base} and substitute for one of the variables. Given that the third equals zero, for a particular value of $\left(\alpha,W_B\right)$, we can solve for the two relevant bribes.
 
 
 
