--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -758,7 +758,8 @@ Evaluating the constraint terms:\\
 			\end{itemize}
 		\item It is NOT the case that $b(0)$ has to be such that $X=Y$ even though $b\left(\frac{1}{2}\right) =0$. In fact, it seems in numerical examples that this does \textit{not} happen.
 			\begin{itemize}
-				\item However, I do see that this existence of the one non-negative bribe is not common. It exists for $\al = 0$ and WB = 8, but goes away as soon as $\al = 0.1$ or WB = 9.
+				\item However, I do see that this existence of the one non-negative bribe (NNB) is not common. It exists for $\al = 0$ and WB = 8, but goes away as soon as $\al = 0.1$ or $W_B$ = 9.
+				\item In both cases, I can see that changing the parameter would push the value of $b(0)$ over $0.5$, making $X > Y$. This is when the solution switches to 2 NNB's.
 			\end{itemize}
 		\item Can write out SOC (just after equation 33) and FOC, sub together to get
 			\[
