add intuiton for what positive X,Y,Z means

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -684,6 +684,7 @@ In general
 				\item If $\al < 0$, legislators on average are biased in favor of B.
 				\item If $\al$ is negative enough, bribe only legislator furthest to the left (most against B)
 			\end{itemize}
+		\item If $X,Y,$ or $Z$ is positive, it means the probability of legislator $0,\frac{1}{2},$ or $-\frac{1}{2}$ voting for the status quo / against the new proposal / with interest group B is greater than $0.5$.
 \end{itemize}
 
 \vskip.2in
