--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -321,9 +321,18 @@ Discrete version (Conversation between Kristy and Frank, 3/27/15)
 					\Phi\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}) \right)\left(1-\Phi\left(- \alpha + b(0) \right)\right)\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right) + \\
 					\left(1-\Phi\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}) \right)\right)\Phi\left(- \alpha + b(0) \right)\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right) + \\
 					\Phi\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}) \right)\Phi\left(- \alpha + b(0) \right)\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right) \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b(j)
+				\end{multline}
+			Substituting from the definition of $X$ but substituting Logit for Probit and using the shorthand notation on the top of page~\pageref{page:sh},
+			  \begin{multline}
+			    \max_{b\left(-\frac{1}{2}\right), b\left(0\right), b\left(\frac{1}{2}\right)} 
+					W_B \biggl[ \frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \left(1-\frac{1}{1+e^{-Y}}\right)  + \\
+					\frac{1}{1+e^{-Z}} \left(1-\frac{1}{1+e^{-X}}\right) \frac{1}{1+e^{-Y}} + \\
+					\left(1-\frac{1}{1+e^{-Z}} \right) \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} + \\
+					\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b(j)
 					\label{eq:obj}
 				\end{multline}
-			The FOC wrt to $b\left(-\frac{1}{2}\right)$ is
+				
+			The FOC wrt to $b\left(-\frac{1}{2}\right)$ is (in terms of probit)
 				\begin{multline}
 					W_B \biggl[ \frac{1}{\sqrt{2\pi}} \: e^{- \frac{\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}\right)^2}{2}} \Phi\left(- \alpha + b(0) \right)\left(1-\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right)\right)  + \\
 					\frac{1}{\sqrt{2\pi}} \: e^{- \frac{\left(-\frac{\beta}{2} - \alpha + b(-\frac{1}{2}\right)^2}{2}} \left(1-\Phi\left(- \alpha + b(0) \right)\right)\Phi\left(\frac{\beta}{2} - \alpha + b(\frac{1}{2}) \right) - \\
@@ -438,7 +447,7 @@ The math that follows from Equation \ref{eq:logistic}:
 		\begin{enumerate}
 			\item $X = -\alpha + b(0)$ 
 			\item $Y = \frac{\beta}{2} - \alpha + b\left(\frac{1}{2}\right)$
-			\item $Z = -\frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right)$
+			\item $Z = -\frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right)\label{page:sh}$ 
 		\end{enumerate}
 	\item Then Equation \ref{eq:logistic} is equivalent to:
 		\begin{equation}
