add intuition on 0 to 1 to 2 to 3, further questions

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -702,6 +702,14 @@ Pattern more or less is to get the guy who is WHAT?
 	\item Imagine a see-saw; these guys are weights on the see-saw.
 \end{itemize}
 		
+\vskip1in
+The only intuition I see for why the next legislator is added in is that it's when the additional expense is justified by the increase in winning probability, conditional on the rule that 2+ legislators have to have the same gross ideal point
+\begin{itemize}
+	\item \textbf{What's the intuition for why they should be equal? Draw graph of the three PDFs in ideal point / net ideal point space}
+	\item \textbf{Next question: How general is this result? That is, how much asymmetry can I have in the logistic distribution, $\beta$s, and for how broad a class of distributions would it hold? My conjecture is that it leans on having an interior single mode}
+\end{itemize}
+		
+		
 \newpage
 \subsection{One Non-negative Bribe}
 When $\al = 0$ and $WB=8$, we find that $b\left(-\frac{1}{2}\right)$ and $b\left(\frac{1}{2}\right)$ are zero. Only $b(0)$ is positive.
