add intuition for which legislator is first lobbied

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -699,7 +699,8 @@ In general
 \vskip.2in
 Pattern more or less is to get the guy who is WHAT?
 \begin{itemize}
-	\item Imagine a see-saw; these guys are weights on the see-saw.
+	\item Frank: Imagine a see-saw; these guys are weights on the see-saw.
+	\item From looking at overlaided graphs of the pdfs (pdf-graph.R), it appears that the legislator who is chosen first is the one who has the most probability mass just to the left of 0 (it's probability mass to the right of zero that counts for winning the vote)
 \end{itemize}
 		
 \vskip1in
