finally solved weird case at alpha = -.75

--- a/GS-extension.tex
+++ b/GS-extension.tex
@@ -701,7 +701,7 @@ Recall:
 		\begin{enumerate}
 			\item $X = -\alpha + b(0)$ 
 			\item $Y = \frac{\beta}{2} - \alpha + b\left(\frac{1}{2}\right)$
-			\item $Z = -\frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right)\label{page:sh}$ 
+			\item $Z = -\frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right)$ 
 		\end{enumerate}
 
 \vskip.1in
@@ -789,7 +789,7 @@ Evaluating the constraint terms:\\
 				\item In both cases, I can see that changing the parameter would push the value of $b(0)$ over $0.5$, making $X > Y$. This is when the solution switches to 2 NNB's.
 				\item {\color{blue} CONJECTURE}: Group B chooses 1 NNB until it would be large enough to make $X > Y$ (when $\al \approx 0$) or $Z > Y$ (when $\al$ large and negative), then switch to 2 NBB
 					\begin{itemize}
-						\item {\color{blue} This is not strictly true around $-0.7$}
+						\item This is not strictly true around $-0.7$: but I can see for $\al = .75,$ when $W_B=10$ it's only $X$, then for $W_B=11$ it's only $Z$. This is because the non-negativity constraint for $Z$ binds at $W_B =10$, as it does for $Y$. $X$ is the only variable there for which it does not bind, and it is worthwhile shifting the middle legislator just a bit.
 						\item When $\al$ is large and positive, go straight from 0 NNB to 2 NNB
 					\end{itemize}
 			\end{itemize}
