update sections and labels

--- a/draft.tex
+++ b/draft.tex
@@ -68,8 +68,10 @@ bookmarksopen=true]{hyperref}
 
 \bigskip
 \section{Introduction}
+\label{sec:intro}
 
 \subsection{Related Literature}
+\label{sec:lit}
 
 %I will begin by ... Section~\ref{sec:main} then ... In Section~ \ref{sec:example}, ... Section~\ref{sec:dis} explores .... Several extensions of the model are explored in Section~\ref{sec:ext} and Section~\ref{sec:concl} concludes.
 
@@ -79,23 +81,21 @@ bookmarksopen=true]{hyperref}
 
 %If we're going to do an empirical implementation of $\ga$ below, model needs to start with a basic understanding of uncertainty, run through lobbying response to it, up through aggregation into $\ga$ and how lobbying behavior turns into a ``yea'' vote total.
 
-\section{Estimating Legislative Uncertainty}
-\label{sec:main}
+\section{Some Theoretical Results}
+\label{sec:res}
 
+\section{Estimating Legislative Uncertainty}
+\label{sec:est}
+
+\section{An Application to the U.S. House of Representatives}
+\label{sec:house}
 
 
 
 %\subsection{Break Decision}
 
-\subsection{Uncertainty for Select Interest Groups}
-\label{sec:select}
-
- 
-
-
-\section{(Plans for) Statistical Analysis}
-\label{sec:dis}
-
+%\subsection{Uncertainty for Select Interest Groups}
+%\label{sec:select}
 
 
 \section{Conclusion}
